Fix header link alignment w/ space-between

--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,8 +1,12 @@
+* {
+  outline: 1px solid red;
+}
+
 .header  {
   font-family: monospace;
   background: papayawhip;
   display: flex;
-  justify-content: center;
+  justify-content: space-between; 
   align-items: center;
   padding: 10px;
 }
